--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^4.3.1",
     "react-idle-timer": "^4.6.4",
     "react-modal": "^3.14.4",
+    "react-player": "^2.9.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.1.0",
     "web-vitals": "^1.1.2"
