--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/core": "^11.0.0",
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -18,6 +19,7 @@
     "react-modal": "^3.14.4",
     "react-player": "^2.9.0",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.11.0",
     "react-toastify": "^8.1.0",
     "web-vitals": "^1.1.2"
   },
