--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@tippy.js/react": "^3.1.1",
+    "chart.js": "^3.6.0",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.3.0",
     "react-color": "^2.19.3",
     "react-countup": "^6.1.0",
     "react-credit-cards": "^0.8.3",
